2010-01-03  Armin Weatherwax  <Armin.Weatherwax@gmail.com>

	* Several changes to work better on 64bit Linux.

	  modified:   linden/indra/cmake/00-Common.cmake
	  modified:   linden/indra/cmake/LLWindow.cmake
	  modified:   linden/indra/develop.py
	  modified:   linden/indra/newview/linux_tools/wrapper.sh
	  modified:   linden/indra/newview/llappviewerlinux.cpp
	  modified:   linden/indra/newview/llfilepicker.cpp
	  modified:   linden/indra/newview/llviewermedia.cpp
	  modified:   linden/indra/newview/viewer_manifest.py
	  modified:   linden/install.xml


2010-01-02  Jacek Antonelli  <jacek.antonelli@gmail.com>

	* Updated version to 1.3.0 "merge test".
	  (newview/res/viewerRes.rc is already at 1.3.0.)

	  modified:   linden/indra/llcommon/llversionviewer.h
	  modified:   linden/indra/newview/English.lproj/InfoPlist.strings
	  modified:   linden/indra/newview/Info-Imprudence.plist


2010-01-01 McCabe Maxsted  <hakushakukun@gmail.com>

	* Fixed panel_radar.xml missing from newview\CMakeLists.txt.
	
	  modified:   linden/indra/newview/CMakeLists.txt
	  
	  
	* Added missing debug tags to logcontrol.xml.
	
	  modified:   linden/indra/newview/app_settings/logcontrol.xml
	  

2009-12-31 McCabe Maxsted  <hakushakukun@gmail.com>

	* Moved notify when L$ spent from Preferences > General to Preferences > Popups.
	  
	  modified:   linden/indra/newview/llpanelgeneral.cpp
	  modified:   linden/indra/newview/llpanelmsgs.cpp
	  modified:   linden/indra/newview/skins/default/xui/en-us/panel_preferences_general.xml
	  modified:   linden/indra/newview/skins/default/xui/en-us/panel_preferences_popups.xml


	* Added preferences option to use legacy pie menu layout.
	
	  new file:   linden/indra/newview/skins/default/xui/en-us/legacy_menu_pie_attachment.xml
	  new file:   linden/indra/newview/skins/default/xui/en-us/legacy_menu_pie_avatar.xml
	  new file:   linden/indra/newview/skins/default/xui/en-us/legacy_menu_pie_land.xml